# GameDurak

./: Algorithm.h  CMakeLists.txt  Card.h  GameDurak.h  HumanMovementController.h  IMovementController.h  LICENSE  Player.h  README.md  main.cpp
private/: Algorithm.cpp  Card.cpp  GameDurak.cpp  HumanMovementController.cpp  IMovementController.cpp  Player.cpp  PlayerAI.cpp  PlayerHuman.cpp
src/: AdditionalDefinitions.h  CMakeLists.txt  HumanMovementController.h  Player.h  PlayerAI.h  PlayerHuman.h
src/private/: GameDurak.cpp  HumanMovementController.cpp  PlayerAI.cpp  PlayerHuman.cpp
